fixed spacing on top of hero image

--- a/SG2 Global_files/style-2.css
+++ b/SG2 Global_files/style-2.css
@@ -408,7 +408,7 @@ a {
 
 @media screen and (max-width:1024px) {
     .main {
-        padding: 40px 0;
+        /*padding: 40px 0;*/
         width: 100%
     }
 }
