--- a/calendar.css
+++ b/calendar.css
@@ -287,7 +287,7 @@ body::-webkit-scrollbar-thumb {
     }
 
     #main > div {
-        padding: 50px 0;
+        padding: 0px 0;
     }
 
     .sidebar {
